added header and banner section

--- a/index.html
+++ b/index.html
@@ -4,10 +4,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>First Portfolio</title>
+    <link rel="shortcut icon" href="Assets/favicon.PNG" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body>
+    <header>
+        <!-- navbar here -->
+        <nav>
+            <h2 class="nav-title"> Ma<span>r</span>y </h2>
+            <ul class="side-bar">
+                <li class="">
+                    <a class="dark-color" href="#">Portfolio</a>
+                </li>
+                <li class="">
+                    <a class="dark-color" href="#">Blog</a>
+                </li>
+                <li class="">
+                    <a href="#">
+                        <button class="btn">
+                            Hire Me
+                        </button>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <!-- banner section started -->
+        <div class="banner">
+            <div class="banner-content">
+
+                <h3 class="sup-title dark-color">
+                    Hi, I am
+                </h3>
+                <h1 class="title">
+                    Mary Hardy
+                </h1>
+                <p class="sub-title dark-color">
+                    Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
+                    behaved moments.
+                </p>
+                <div class="">
+                    <button class="btn">
+                        Download CV
+                    </button>
+                    <button class="btn">
+                        Contact Now
+                    </button>
+                </div>
+            </div>
+
+            <div class="banner-img">
+
+                <img src="./Assets/images/hardy.png" alt="Mary Hardy" class="">
+
+            </div>
+        </div>
+
+
+    </header>
+
 
 </body>
 
