--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="secondary-bg">
         <!-- navbar here -->
         <nav>
             <h2 class="nav-title"> Ma<span>r</span>y </h2>
@@ -61,10 +61,222 @@
 
             </div>
         </div>
-
-
     </header>
+    <!-- main section here -->
+    <main class="main">
+        <section class="about secondary-bg">
+            <h3 class="about-title">
+                About Me
+            </h3>
+            <p class="about-info dark-color">
+                I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick
+                websites that
+                provide real value to the end user. Thousands of clients have procured exceptional resulfs while working
+                with me.
+                Delivering work within time and budget which meets clients requirements in our mata.
+            </p>
+            <div class="about-items">
 
+                <div class="about-item">
+
+                    <p class="item-title dark-color">Name</p>
+                    <p class="item-desc">Mary Hardy</p>
+
+                </div>
+
+                <div class="about-item">
+
+                    <p class="item-title dark-color">Email</p>
+                    <p class="item-desc">abc@gmail.com </p>
+
+                </div>
+
+                <div class="about-item">
+
+                    <p class="item-title dark-color">Date of Birth</p>
+                    <p class="item-desc">14 July, 2003</p>
+
+                </div>
+
+                <div class="about-item">
+
+                    <p class="item-title dark-color">From</p>
+                    <p class="item-desc">Los Angeles,USA</p>
+
+                </div>
+            </div>
+
+
+        </section>
+        <!-- What i do section -->
+        <section class="skills">
+            <div class="skill-pre">
+                <h3 class="skill-title">
+                    What I do
+                </h3>
+                <p class="skill-desc dark-color">
+                    I have more than 10 years experience building software for clients all over the world. Below is a
+                    quick
+                    overview of my
+                    main technical skill sets and technologies i use. Want to find out more about my experience? Check
+                    out
+                    my online resume
+                    and project portfolio.
+                </p>
+            </div>
+            <!-- skill card container -->
+            <div class="skill-container">
+                <div class="skill">
+                    <img src="./Assets/images/icons/js.png" alt="Java Script" class="">
+                    <h4 class="skills-title">
+                        Vanilla JavaScript
+                    </h4>
+                    <p class="skill-info dark-color">
+                        List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
+                        free icons available.
+                        Aenean commodo ligula eget dolor.
+                    </p>
+                </div>
+                <div class="skill">
+                    <img src="./Assets/images/icons/react.png" alt="" class="">
+                    <h4 class="skills-title">
+                        React
+                    </h4>
+                    <p class="skill-info dark-color">
+                        List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
+                        free icons available.
+                        Aenean commodo ligula eget dolor.
+                    </p>
+                </div>
+                <div class="skill">
+                    <img src="./Assets/images/icons/nodejs.png" alt="" class="">
+                    <h4 class="skills-title">
+                        Node.js
+                    </h4>
+                    <p class="skill-info dark-color">
+                        List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
+                        free icons available.
+                        Aenean commodo ligula eget dolor.
+                    </p>
+                </div>
+                <div class="skill">
+                    <img src="./Assets/images/icons/mongo.png" alt="" class="">
+                    <h4 class="skills-title">
+                        MongoDB
+                    </h4>
+                    <p class="skill-info dark-color">
+                        List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
+                        free icons available.
+                        Aenean commodo ligula eget dolor.
+                    </p>
+                </div>
+
+            </div>
+
+        </section>
+        <!-- resume section -->
+        <section class="resume">
+            <h3 class="section-title">
+                A Summary of My Resume
+            </h3>
+            <div class="resume-container dark-color">
+                <div class="ed-container">
+                    <h4 class="ed-container-title">
+                        My Education
+                    </h4>
+                    <div class="ed">
+                        <h5 class="ed-title">
+                            Master in Computer Engineering
+                        </h5>
+                        <p class="filed">
+                            Harvard University / 2015 - 2017
+                        </p>
+                        <p class="info">
+                            List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <div class="ed">
+                        <h5 class="ed-title">
+                            Master in Computer Engineering
+                        </h5>
+                        <p class="field">
+                            Harvard University / 2015 - 2017
+                        </p>
+                        <p class="info">
+                            List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <div class="ed">
+                        <h5 class="ed-title">
+                            Master in Computer Engineering
+                        </h5>
+                        <p class="field">
+                            Harvard University / 2015 - 2017
+                        </p>
+                        <p class="info">
+                            List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- experience container -->
+
+                <div class="exp-container">
+                    <h4 class="exp-container-title">
+                        My Experience
+                    </h4>
+                    <div class="exp">
+                        <h5 class="exp-title">
+                            Sr. Font End Developer
+                        </h5>
+                        <p class="field">
+                            Apple Inc / 2020 - Current
+                        </p>
+                        <p class="info">
+                            List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <div class="exp">
+                        <h5 class="exp-title">
+                            Jr. Font End Developer
+                        </h5>
+                        <p class="field">
+                            Dribbble Inc / 2018 - 2022
+                        </p>
+                        <p class="info">
+                            List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <div class="exp">
+                        <h5 class="exp-title">
+                            HTML Developer
+                        </h5>
+                        <p class="field">
+                            Adobe Inc / 2017 - 2018
+                        </p>
+                        <p class="info">
+                            List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="cv">
+                <button class="btn">
+                    Download CV
+                </button>
+            </div>
+
+
+        </section>
+
+
+    </main>
 
 </body>
 
