added all the designs and contents

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                         <h5 class="ed-title">
                             Master in Computer Engineering
                         </h5>
-                        <p class="filed">
+                        <p class="field">
                             Harvard University / 2015 - 2017
                         </p>
                         <p class="info">
@@ -275,9 +275,57 @@
 
         </section>
 
-
     </main>
+    <footer class="secondary-bg">
+        <div class="footer-column">
+            <h3 class="section-title">
+                Let's Connect
+            </h3>
+            <p class="dark-color">
+                Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET,
+                Monday through
+                Friday.
+            </p>
+            <div class="links">
+                <a href="#" class="">
+                    <img src="./Assets/images/icons/facebook.png" alt="Facebook" class="">
+                </a>
+                <a href="#" class="">
+                    <img src="./Assets/images/icons/insta.png" alt="Instagram" class="">
+                </a>
+                <a href="#" class="">
+                    <img src="./Assets/images/icons/twitter.png" alt="Twitter" class="">
+                </a>
+            </div>
+        </div>
+        <div class="footer-column">
+            <h3 class="section-title">
+                Let's DM Me
+            </h3>
+            <form action="">
+                <label for="name">
+                    <input id="name" type="text" placeholder="Your Name">
+                </label>
+                <label for="Email">
+                    <input id="email" type="email" placeholder="Your Email">
+                </label>
+               <label for="message">
+                <textarea placeholder="Message" name="" id="message" cols="30" rows="15"></textarea>
+               </label>
+                <label for="submit">
+                    <input class="btn" type="submit">
+                    <input class="btn" type="reset">
+                </label>
 
+
+            </form>
+        </div>
+
+    </footer>
+    <hr>
+    <p class="copyright secondary-bg section-title">
+        &copy; All Rights Reserved By Mary Hardy,2020!
+    </p>
 </body>
 
 </html>
