changed title of the site

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First Portfolio</title>
+    <title>Mary Hardy</title>
     <link rel="shortcut icon" href="Assets/favicon.PNG" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
 
@@ -309,9 +309,9 @@
                 <label for="Email">
                     <input id="email" type="email" placeholder="Your Email">
                 </label>
-               <label for="message">
-                <textarea placeholder="Message" name="" id="message" cols="30" rows="15"></textarea>
-               </label>
+                <label for="message">
+                    <textarea placeholder="Message" name="" id="message" cols="30" rows="15"></textarea>
+                </label>
                 <label for="submit">
                     <input class="btn" type="submit">
                     <input class="btn" type="reset">
