added icon from fontawesome

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Mary Hardy</title>
     <link rel="shortcut icon" href="Assets/favicon.PNG" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/ef927b4c53.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -47,10 +48,10 @@
                 </p>
                 <div class="">
                     <button class="btn">
-                        Download CV
+                    <i class="fa-solid fa-download"></i>    Download CV
                     </button>
                     <button class="btn">
-                        Contact Now
+                    <i class="fa-solid fa-phone"></i>  Contact Now
                     </button>
                 </div>
             </div>
@@ -268,7 +269,7 @@
             </div>
             <div class="cv">
                 <button class="btn">
-                    Download CV
+                <i class="fa-solid fa-download"></i>  Download CV
                 </button>
             </div>
 
